# sinapse_agent

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  AGENT_BOOTSTRAP.md  ARCHITECTURE.md  README.md  install.sh  pyproject.toml  sinapse.yaml
.github/workflows/: test.yml
cerebro/: AGENTS.md  CLAUDE.md  Cloud-Security.md  GEMINI.md  Hive-Mind Dashboard.md  _Consciencia.md  vault-manifest.json
cerebro/.claude/: settings.json
cerebro/.codex/: hooks.json
cerebro/atoms/: 2026-05-24-exemplo-de-uso-do-sinapse-mcp-para-uma-consulta-de-codigo.md  Agent-Loop-Protocol.md  Gotchas-Failure-Modes.md  Key-Decision-Rename-to-Thoth.md  RESOLVER-Skill-Dispatcher.md
cerebro/brain/: Agent Loop Protocol.md  Consolidated.md  Patterns.md
config/: components.lock.json  env.roles.example  sinapse-agent-prompt.md  sinapse.yaml
core/: agy_client.py  auth.py  database.py  federation.py  gemini_cli_client.py  graphiti_client.py  hnsw_index.py  indexing.py  lightrag_index.py  llm_client.py  paths.py  telemetry.py  umc_schema.sql  umc_schema_crr.sql
core/memory/: __init__.py  (+6 more)
docs/: 01-architecture.md  02-ai-models.md  03-data-pipeline.md  04-infrastructure.md  05-blueprints.md  06-gap-analysis.md  07-p2p-sync-setup.md  08-memoria-viva-design.md  10-implementation-roadmap.md  11-knowledge-promotion-architecture.md  12-knowledge-implementation-plan.md  README.md  installation.md
graphify-out/: manifest.json
patches/: graphify-hive-mind.patch  neural-memory-event-loop.patch
scripts/: audit_memory.py  benchmark_watcher.py  build-graph.sh  build_hnsw.py  capture-realtime.py  capture-tailer.py  capture_adapters.py  capture_core.py  claude-mem-hook.sh  claude-mem-local.sh  claude_mem_bridge.py  components.py  conflict_detector.py  daily_writer.py  decision_promoter.py  document_ingest.py  dream_cycle.py  generate_mocs.py  health_dashboard.py  hive_analytics.py  install_services.py  materialize_operational_state.py  mcp-server.sh  neural-memory-local.sh  planner.py  recover.sh  recovery.py  register-mcp.sh  repair_claude_mem_fk.py  seed_dream_test.py  serve-graph.sh  session_consolidator.py  session_placeholder.py  session_update.py  setup-brain.py  setup-brain.sh  setup-dreamer.py  setup_umc.py  sinapse-api.py  sinapse-mcp.py  (+12 more)
tests/: README.md  run_all.sh  test_portal_generator.py  test_synthesis.py
(+234 files in other folders)
