[project]
name = "hive-mind"
version = "3.0.0"
description = "Local-first persistent memory infrastructure for AI agents"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cryptography>=41.0",
    "duckdb>=0.10",
    "fastapi>=0.100.0",
    "fastembed>=0.2",
    "graphifyy[watch]",
    "hnswlib>=0.8.0",
    "httpx>=0.23.0",
    "mss>=9.0",
    "neural-memory[pro]",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pymupdf>=1.23",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "slowapi>=0.1.9",
    "sqlite-vec>=0.1.1",
    "uvicorn>=0.20.0",
    "watchdog>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-mock>=3.14",
    "pytest-timeout>=2.3",
]

[tool.uv]
package = false

[tool.uv.sources]
graphifyy = { path = "graphify", editable = true }
neural-memory = { path = "neural-memory", editable = true }
